dropshot/tests/fail/bad_endpoint9.stderr
error[E0277]: the trait bound `dropshot::Query<QueryParams>: RequestContextArgument` is not satisfied
  --> tests/fail/bad_endpoint9.rs:25:14
   |
25 |     _params: Query<QueryParams>,
   |              ^^^^^ the trait `RequestContextArgument` is not implemented for `dropshot::Query<QueryParams>`
   |
   = help: the trait `RequestContextArgument` is implemented for `RequestContext<T>`

error[E0277]: the trait bound `dropshot::Query<QueryParams>: RequestContextArgument` is not satisfied
  --> tests/fail/bad_endpoint9.rs:20:1
   |
20 | / #[endpoint {
21 | |     method = GET,
22 | |     path = "/test",
23 | | }]
   | |__^ the trait `RequestContextArgument` is not implemented for `dropshot::Query<QueryParams>`
   |
   = help: the trait `RequestContextArgument` is implemented for `RequestContext<T>`
   = note: this error originates in the attribute macro `endpoint` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(dropshot::Query<QueryParams>) -> impl Future<Output = Result<HttpResponseOk<()>, HttpError>> {<impl std::convert::From<bad_endpoint> for ApiEndpoint<<dropshot::Query<QueryParams> as RequestContextArgument>::Context>>::from::bad_endpoint}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_endpoint9.rs:24:10
   |
20 | / #[endpoint {
21 | |     method = GET,
22 | |     path = "/test",
23 | | }]
   | |__- required by a bound introduced by this call
24 |   async fn bad_endpoint(
   |            ^^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(dropshot::Query<QueryParams>) -> impl Future<Output = Result<HttpResponseOk<()>, HttpError>> {<impl std::convert::From<bad_endpoint> for ApiEndpoint<<dropshot::Query<QueryParams> as RequestContextArgument>::Context>>::from::bad_endpoint}`
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
